; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/gspca/extr_sn9c20x.c_i2c_w2_buf.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/gspca/extr_sn9c20x.c_i2c_w2_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gspca_dev = type { i32 }
%struct.i2c_reg_u16 = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gspca_dev*, %struct.i2c_reg_u16*, i32)* @i2c_w2_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i2c_w2_buf(%struct.gspca_dev* %0, %struct.i2c_reg_u16* %1, i32 %2) #0 {
  %4 = alloca %struct.gspca_dev*, align 8
  %5 = alloca %struct.i2c_reg_u16*, align 8
  %6 = alloca i32, align 4
  store %struct.gspca_dev* %0, %struct.gspca_dev** %4, align 8
  store %struct.i2c_reg_u16* %1, %struct.i2c_reg_u16** %5, align 8
  store i32 %2, i32* %6, align 4
  br label %7

7:                                                ; preds = %11, %3
  %8 = load i32, i32* %6, align 4
  %9 = add nsw i32 %8, -1
  store i32 %9, i32* %6, align 4
  %10 = icmp sge i32 %9, 0
  br i1 %10, label %11, label %22

11:                                               ; preds = %7
  %12 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %13 = load %struct.i2c_reg_u16*, %struct.i2c_reg_u16** %5, align 8
  %14 = getelementptr inbounds %struct.i2c_reg_u16, %struct.i2c_reg_u16* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.i2c_reg_u16*, %struct.i2c_reg_u16** %5, align 8
  %17 = getelementptr inbounds %struct.i2c_reg_u16, %struct.i2c_reg_u16* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @i2c_w2(%struct.gspca_dev* %12, i32 %15, i32 %18)
  %20 = load %struct.i2c_reg_u16*, %struct.i2c_reg_u16** %5, align 8
  %21 = getelementptr inbounds %struct.i2c_reg_u16, %struct.i2c_reg_u16* %20, i32 1
  store %struct.i2c_reg_u16* %21, %struct.i2c_reg_u16** %5, align 8
  br label %7

22:                                               ; preds = %7
  ret void
}

declare dso_local i32 @i2c_w2(%struct.gspca_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
